# ncd-tree

./: CHANGELOG.md  LICENSE  Makefile  README.md  ncd-tree.cabal
.github/workflows/: test.yml
app/: Main.hs  TestDebug.hs
bench/: Main.hs
src/Data/: NCDTree.hs
test/Data/: NCDTreeSpec.hs
